--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,59 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+  push:
+
+    branches: main
+
+name: Quarto Publish
+
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+
+  build-deploy:
+
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    permissions:
+
+      contents: write
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Check out repository
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+        uses: actions/checkout@v2
+
+      - name: Set up Quarto
+
+        uses: quarto-dev/quarto-actions/setup@v2
+
+      - name: Install R
+
+        uses: r-lib/actions/setup-r@v2
+
+        with:
+
+          r-version: '4.2.0'
+
+      - name: Install R Dependencies
+
+        uses: r-lib/actions/setup-renv@v2
+
+        with:
+
+          cache-version: 1
+
+      - name: Render and Publish
+
+        uses: quarto-dev/quarto-actions/publish@v2
+
+        with:
+
+          target: gh-pages
+
+        env:
+
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
