--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -23,9 +23,16 @@ jobs:
           r-version: '4.2.0'
 
       - name: Install R Dependencies
-        uses: r-lib/actions/setup-renv@v2
+        uses: r-lib/actions/setup-r@v2
         with:
-          cache-version: 1
+         use-public-rspm: true
+
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: any::rcmdcheck
+          needs: check
+
+      - uses: r-lib/actions/check-r-package@v2
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
