--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -16,6 +16,9 @@ jobs:
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
+        with:
+          # To install LaTeX to build PDF book 
+          tinytex: true 
 
       - name: Install R
         uses: r-lib/actions/setup-r@v2
@@ -25,7 +28,7 @@ jobs:
       - name: Install R Dependencies
         uses: r-lib/actions/setup-r@v2
         with:
-         use-public-rspm: true
+          cache-version: 1
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
