--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -28,6 +28,8 @@ jobs:
       - name: Install R Dependencies
         uses: r-lib/actions/setup-r@v2
         with:
+          rmarkdown: true
+          jsonlite: true
           cache-version: 1
 
       - name: Render and Publish
