--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -7,7 +7,7 @@ name: Quarto Publish
 
 jobs:
   build-deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
