--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -26,10 +26,11 @@ jobs:
           r-version: '4.2.1'
 
       - name: Install R Dependencies
-        uses: r-lib/actions/setup-r@v2
+        uses: actions/checkout@v3
+      - uses: r-lib/actions/setup-r@v2
+      - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          rmarkdown: true
-          jsonlite: true
+          packages: any::jsonlite, any::rmarkdown
           cache-version: 1
 
       - name: Render and Publish
