--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          packages: any::jsonlite, any::rmarkdown
+          packages: any::jsonlite, any::rmarkdown, any::tidyverse
           cache-version: 1
 
       - name: Render and Publish
