--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -30,8 +30,12 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          packages: any::jsonlite, any::rmarkdown, any::tidyverse
+         # packages: any::jsonlite, any::rmarkdown, any::tidyverse
+         # cache-version: 1
+          extra-packages: any::rcmdcheck
+          needs: check
           cache-version: 1
+      - uses: r-lib/actions/check-r-package@v2
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
